--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BotonesDinamicos2223</string>
     <string name="crear">Crear</string>
     <string name="nbotones">Nº Botones</string>
+    <string name="borrar">Borrar</string>
 </resources>
